# string_pipeline

./: .gitignore  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  cliff.toml  test_bench_throughput.sh
.github/workflows/: bench-command.yml  benchmark.yml  cd.yml  changelog.yml  ci.yml  release.yml  update-baseline.yml
benches/: process.rs
docs/: bench_throughput_plan.md  bench_throughput_usage.md  benchmarking.md  command-line-options.md  debug-system.md  template-system.md
scripts/: README.md  analyze_all_templates.sh  compare_benchmark_versions.sh  compare_benchmarks.py  compare_template_results.py  compile_benchmark_versions.sh
src/: lib.rs  main.rs  pipeline.rs
src/pipeline/: debug.rs  mod.rs  parser.rs  template.pest  template.rs
tests/: cli_tests.rs  multi_template_tests.rs  template_composition_tests.rs
tests/template/: complex_pipeline.rs  map_operations.rs  mod.rs  simple_pipeline.rs
