[package]
name = "string_pipeline"
version = "0.4.0"
edition = "2024"
authors = ["Luis M Alvarez"]
description = "A flexible, template-driven string transformation pipeline for Rust."
license = "MIT"
repository = "https://github.com/lalvarezt/string_pipeline"
homepage = "https://github.com/lalvarezt/string_pipeline"
documentation = "https://docs.rs/string_pipeline"
readme = "README.md"
keywords = ["string", "pipeline", "template", "text", "transformation"]
categories = ["text-processing", "command-line-utilities"]

[dependencies]
regex = "1"
clap = { version = "4", features = ["derive"] }
pest = "2.8"
pest_derive = "2.8"
