[package]
name = "string_pipeline"
version = "0.8.1"
edition = "2024"
authors = ["Luis M Alvarez"]
description = "A flexible, template-driven string transformation pipeline for Rust."
license = "MIT"
repository = "https://github.com/lalvarezt/string_pipeline"
homepage = "https://github.com/lalvarezt/string_pipeline"
documentation = "https://docs.rs/string_pipeline"
readme = "README.md"
keywords = ["string", "pipeline", "template", "text", "transformation"]
categories = ["text-processing", "command-line-utilities"]

[dependencies]
regex = "1.11.1"
clap = { version = "4.5.39", features = ["derive"] }
pest = "2.8.0"
pest_derive = "2.8.0"
strip-ansi-escapes = "0.2.1"

[build-dependencies]
clap = { version = "4.5.39", features = ["derive", "cargo"] }
clap_mangen = "0.2.26"

[[bin]]
bench = false
name = "string-pipeline"
path = "src/main.rs"

[profile.staging]
inherits = "dev"
opt-level = 3
debug = true
lto = false

[profile.profiling]
inherits = "release"
debug = true

[profile.release]
codegen-units = 1
lto = "fat"

[profile.deb]
inherits = "release"
debug = false

[dev-dependencies]
criterion = { version = "0.6" }

[[bench]]
name = "process"
harness = false
