[package]
name = "string_pipeline"
version = "0.13.0"
edition = "2024"
authors = ["Luis M Alvarez"]
description = "A flexible, template-driven string transformation pipeline for Rust."
license = "MIT"
repository = "https://github.com/lalvarezt/string_pipeline"
homepage = "https://github.com/lalvarezt/string_pipeline"
documentation = "https://docs.rs/string_pipeline"
readme = "README.md"
keywords = ["string", "pipeline", "template", "text", "transformation"]
categories = ["text-processing", "command-line-utilities"]
default-run = "string-pipeline"

[dependencies]
regex = "1.11.1"
clap = { version = "4.5.39", features = ["derive"] }
pest = "2.8.0"
pest_derive = "2.8.0"
fast-strip-ansi = "0.11"
once_cell = "1.21.3"
parking_lot = "0.12.3"
dashmap = "6.1.0"
smallvec = "1.15.0"
memchr = "2.7.4"

[build-dependencies]
clap = { version = "4.5.39", features = ["derive", "cargo"] }
clap_mangen = "0.2.26"

[[bin]]
bench = false
name = "string-pipeline"
path = "src/main.rs"

[[bin]]
name = "string-pipeline-bench"
path = "src/bin/bench.rs"

[profile.staging]
inherits = "dev"
opt-level = 3
debug = true
lto = false

[profile.profiling]
inherits = "release"
debug = true

[profile.release]
codegen-units = 1
lto = "fat"

[profile.deb]
inherits = "release"
debug = false

[dev-dependencies]
criterion = { version = "0.6" }
tempfile = "3.20.0"

[[bench]]
name = "process"
harness = false
